--- a/css/semantic.css
+++ b/css/semantic.css
@@ -4,6 +4,23 @@ body {
     line-height: 1.5;
 }
 
+
+section {
+    background: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
+}
+
+.sections section:first-child {
+    background: moccasin;
+}
+
+section a {
+    background: rebeccapurple;
+    color: white;
+    padding: 8px 15px;
+}
+
 a {
     color: rebeccapurple;
     font-weight: 700;
@@ -20,8 +37,9 @@ h3 {
 .header {
     display: flex;
     border-bottom: 1px solid #000;
-    padding-bottom: 10px;
     font-size: 20px;
+    padding-top: 10px;
+    padding: 10px 20px;
 }
 
 .logo {
@@ -30,6 +48,7 @@ h3 {
     color: lightgreen;
     background: rebeccapurple;
     font-weight: 700;
+    padding: 5px 15px;
 }
 
 ul {
@@ -39,8 +58,9 @@ ul {
     margin: 0;
 }
 
-ul>li {
-    margin-right: 10px;
+
+ul>li:not(:last-child) {
+    margin-right: 30px;
 }
 
 .box {
@@ -51,14 +71,15 @@ ul>li {
 }
 
 .aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+    background: lavender;
+    padding: 10px 20px;
 }
 
 .post {
     padding-bottom: 20px;
 }
 
-footer {
+.footer {
     font-size: 13px;
+    padding: 0 20px;
 }
