--- a/css/semantic.css
+++ b/css/semantic.css
@@ -11,11 +11,18 @@ section {
     margin-bottom: 20px;
 }
 
-.sections section:first-child {
-    background: moccasin;
+.results {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0 10px;
 }
 
+.results section:first-child {}
+
 section a {
+    display: block;
+    margin-top: 0.5rem;
+    text-align: center;
     background: rebeccapurple;
     color: white;
     padding: 8px 15px;
@@ -51,17 +58,23 @@ h3 {
     padding: 5px 15px;
 }
 
+nav {
+    display: flex;
+
+}
+
 ul {
     display: flex;
     list-style-type: none;
+    align-items: center;
+    justify-content: center;
     padding-left: 0;
     margin: 0;
+    gap: 0 30px;
 }
 
 
-ul>li:not(:last-child) {
-    margin-right: 30px;
-}
+ul>li:not(:last-child) {}
 
 .box {
     display: flex;
